--- a/style.css
+++ b/style.css
@@ -156,4 +156,28 @@ a{color:inherit;text-decoration:none}
 }
 
 
+/* --- FIX: allow full mega-menu height on desktop --- */
+@media (min-width: 769px) {
+  .shop-nav {
+    overflow: visible; /* lar menyen bre seg ut over andre elementer */
+  }
+
+  .mega-menu {
+    max-height: none;
+    overflow: visible;
+    z-index: 9999;
+  }
+
+  /* liten visuell finpuss for ren kant */
+  .mega-menu::before {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background: transparent;
+  }
+}
+
 
